force-app/main/default/objects/Lead/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Street 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>