force-app/main/default/objects/Lead/fields/Street_3__c.field-meta.xml
<CustomField>
    <fullName>Street_3__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Street 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>