force-app/main/default/objects/Lead/fields/Test_Phone__c.field-meta.xml
<CustomField>
    <fullName>Test_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>