force-app/main/default/objects/Lead/fields/Time_Employed_with_Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Time_Employed_with_Previous_Employer__c</fullName>
    <description>Time in months</description>
    <label>Time Employed with Previous Employer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>