force-app/main/default/objects/Lead/fields/Time_Escalated_tier_one__c.field-meta.xml
<CustomField>
    <fullName>Time_Escalated_tier_one__c</fullName>
    <description>Time Escalated to Tier one</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Escalated to 1</label>
    <type>DateTime</type>
</CustomField>