force-app/main/default/objects/Lead/fields/Time_Escalated_to_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Time_Escalated_to_Tier_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Escalated to Tier 2</label>
    <type>DateTime</type>
</CustomField>