force-app/main/default/objects/Lead/fields/Time_in_Collect_Customers_Information__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Collect_Customers_Information__c</fullName>
    <label>Time in Collect Customer Information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>