force-app/main/default/objects/Lead/fields/Time_in_Determine_Customer_Need_Goals__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Determine_Customer_Need_Goals__c</fullName>
    <label>Time Determine Customer Needs and Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>