force-app/main/default/objects/Lead/fields/Time_in_Industry__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Industry__c</fullName>
    <description>In months</description>
    <label>Time in Industry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>