force-app/main/default/objects/Lead/fields/Time_in_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Open__c</fullName>
    <label>Time in Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>