force-app/main/default/objects/Lead/fields/Time_in_Run_Loan_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Run_Loan_Scenario__c</fullName>
    <label>Time in Run Loan Scenario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>