force-app/main/default/objects/Lead/fields/Time_in_Working__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Working__c</fullName>
    <label>Time in Working</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>