force-app/main/default/objects/Lead/fields/Time_with_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Time_with_Current_Employer__c</fullName>
    <description>Months</description>
    <label>Time with Current Employer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>