force-app/main/default/objects/Lead/fields/Type_of_Industry_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Industry_Self_Employed__c</fullName>
    <label>Type of Industry Self-Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Category_IFRS_Self_Employed</valueSetName>
    </valueSet>
</CustomField>