force-app/main/default/objects/Lead/fields/Unemployed_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Unemployed City/Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>