force-app/main/default/objects/Lead/fields/Unemployed_Industry_Previous_Employment__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Industry_Previous_Employment__c</fullName>
    <label>Unemployed Industry Previous Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Category_IFRS_Employed</valueSetName>
    </valueSet>
</CustomField>