force-app/main/default/objects/Lead/fields/Unemployed_Last_Position_Held__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Last_Position_Held__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployed Last Position Held</label>
    <length>40</length>
    <type>Text</type>
</CustomField>