force-app/main/default/objects/Lead/fields/Unemployed_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Phone_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Unemployed Phone 1</label>
    <type>Phone</type>
</CustomField>