force-app/main/default/objects/Lead/fields/Unemployed_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Phone_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Unemployed Phone 2</label>
    <type>Phone</type>
</CustomField>