force-app/main/default/objects/Lead/fields/Unemployed_Post_Office_Zip__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Post_Office_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployed Post Office /Zip</label>
    <length>40</length>
    <type>Text</type>
</CustomField>