force-app/main/default/objects/Lead/fields/Unemployed_Previous_Emoployer__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Previous_Emoployer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployed Previous Employer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>