force-app/main/default/objects/Lead/fields/Unemployed_Province_Parish_State__c.field-meta.xml
<CustomField>
    <fullName>Unemployed_Province_Parish_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployed Province /Parish/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>