force-app/main/default/objects/Lead/fields/User_who_Converted__c.field-meta.xml
<CustomField>
    <fullName>User_who_Converted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has converted this lead</description>
    <label>User who Converted</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_and_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>