force-app/main/default/objects/Lead/validationRules/Credit_Facility_RT_Must_have_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Facility_RT_Must_have_Product</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
RecordTypeId = &#39;012q00000001foHAAQ&#39;,

NOT (
OR(
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Credit Card&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Auto Loan&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Commercial Auto Loan&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Line Of Credit&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Term Share Loan&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Unsecured Loan&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank 12 to 1 Loan (Supersize Loan)&#39;),
ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Cash Secured Loan&#39;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Service_of_Interest__c</errorDisplayField>
    <errorMessage>Please Update Product To A Credit Facility Related Product</errorMessage>
</ValidationRule>