force-app/main/default/objects/Lead/validationRules/Deposit_Account_RT_Must_have_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Account_RT_Must_have_Product</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
RecordTypeId = &#39;012q00000001foMAAQ&#39;,

NOT (

ISPICKVAL(Service_of_Interest__c, &#39;JN Bank Deposit Account&#39;)

)
)</errorConditionFormula>
    <errorDisplayField>Service_of_Interest__c</errorDisplayField>
    <errorMessage>Please Update Product To A Deposit Account Related Product</errorMessage>
</ValidationRule>