force-app/main/default/objects/Lead/validationRules/Disqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Disqualified_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &#39;Disqualifed&#39;),
 ISBLANK(TEXT( Disqualification_Reason__c ) )
)</errorConditionFormula>
    <errorDisplayField>Disqualification_Reason__c</errorDisplayField>
    <errorMessage>To Change A Lead TO &quot;Disqualifed&quot; You Need To to Choose A Disqualification Reason</errorMessage>
</ValidationRule>