force-app/main/default/objects/Lead/validationRules/Do_not_use_General_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_use_General_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW(),
   RecordType.DeveloperName = &quot;General&quot;
)</errorConditionFormula>
    <errorMessage>Please use a different record type. Do not use this one</errorMessage>
</ValidationRule>