force-app/main/default/objects/Lead/validationRules/FinServ__NonPortalUserReferrer.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__NonPortalUserReferrer</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &#39;Standard&#39;))
            )</errorConditionFormula>
    <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
    <errorMessage
  >Internal referrers must be internal Salesforce users.</errorMessage>
</ValidationRule>