force-app/main/default/objects/Lead/validationRules/First_Name_is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_is_Blank</fullName>
    <active>true</active>
    <description>First name must be filled out</description>
    <errorConditionFormula>ISBLANK( FirstName)</errorConditionFormula>
    <errorMessage>Please Fill Out First Name In Order To Proceed</errorMessage>
</ValidationRule>