force-app/main/default/objects/Lead/validationRules/Invalid_BusinessPhone2_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_BusinessPhone2_Formula</fullName>
    <active>true</active>
    <description>Ensures that the business phone 2 field is properly validated.</description>
    <errorConditionFormula>IF( OR(ISCHANGED(Business_Phone_2__c) &amp;&amp; NOT(ISNULL(Business_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Business_Phone_2__c)) &amp;&amp; !REGEX(Business_Phone_2__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Business_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Business_Phone_2__c)) &amp;&amp; !REGEX(Business_Phone_2__c,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Business_Phone_2__c</errorDisplayField>
    <errorMessage>Invalid format entered for business phone 2. The minimum number of digits should be 10</errorMessage>
</ValidationRule>