force-app/main/default/objects/Lead/validationRules/Invalid_EmployerPhone2_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_EmployerPhone2_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the employer phone 2 field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Employer_Phone_2__c) &amp;&amp; NOT(ISNULL(Employer_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Employer_Phone_2__c)) &amp;&amp; !REGEX(Employer_Phone_2__c,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Employer_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Employer_Phone_2__c )) &amp;&amp; !REGEX(Employer_Phone_2__c,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Employer_Phone_2__c</errorDisplayField>
    <errorMessage
  >Invalid format entered for employer phone 2. The minimum number of digits should be 10</errorMessage>
</ValidationRule>