force-app/main/default/objects/Lead/validationRules/Invalid_HomePhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_HomePhone_Formula</fullName>
    <active>true</active>
    <description>Ensures that the home phone field is properly validated.</description>
    <errorConditionFormula>IF( OR(ISCHANGED(Home_Phone__c ) &amp;&amp; NOT(ISNULL(Home_Phone__c )) &amp;&amp; NOT(ISBLANK(Home_Phone__c )) &amp;&amp; !REGEX(Home_Phone__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Home_Phone__c )) &amp;&amp; NOT(ISBLANK(Home_Phone__c )) &amp;&amp; !REGEX(Home_Phone__c ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Home_Phone__c</errorDisplayField>
    <errorMessage>Invalid format entered for home phone. The minimum number of digits should be 10</errorMessage>
</ValidationRule>