force-app/main/default/objects/Lead/validationRules/Invalid_OtherPhone_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_OtherPhone_Formula</fullName>
    <active>true</active>
    <description>Ensures that the other phone field is properly validated.</description>
    <errorConditionFormula>IF( OR(ISCHANGED(Other_Number__c) &amp;&amp; NOT(ISNULL(Other_Number__c)) &amp;&amp; NOT(ISBLANK(Other_Number__c)) &amp;&amp; !REGEX(Other_Number__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Other_Number__c)) &amp;&amp; NOT(ISBLANK(Other_Number__c)) &amp;&amp; !REGEX(Other_Number__c,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Other_Number__c</errorDisplayField>
    <errorMessage>Invalid format entered for other phone. The minimum number of digits should be 10</errorMessage>
</ValidationRule>