force-app/main/default/objects/Lead/validationRules/Invalid_PreviousEmployerPhone2_Formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_PreviousEmployerPhone2_Formula</fullName>
    <active>true</active>
    <description
  >Ensures that the previous employer phone 2 field is properly validated.</description>
    <errorConditionFormula
  >IF( OR(ISCHANGED(Previous_Employer_Phone_2__c) &amp;&amp; NOT(ISNULL(Previous_Employer_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Previous_Employer_Phone_2__c)) &amp;&amp; !REGEX(Previous_Employer_Phone_2__c ,&#39;^\\d{10,25}$&#39;), ISNEW() &amp;&amp; NOT(ISNULL(Previous_Employer_Phone_2__c)) &amp;&amp; NOT(ISBLANK(Previous_Employer_Phone_2__c)) &amp;&amp; !REGEX(Previous_Employer_Phone_2__c ,&#39;^\\d{10,25}$&#39;)),true,false)</errorConditionFormula>
    <errorDisplayField>Previous_Employer_Phone_2__c</errorDisplayField>
    <errorMessage
  >Invalid format entered for previous employer phone 2. The minimum number of digits should be 10</errorMessage>
</ValidationRule>