force-app/main/default/objects/Lead/validationRules/Lead_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Profile.Name != &#39;System Administrator&#39;, ISCHANGED( Status ))</errorConditionFormula>
    <errorMessage>You cannot change the lead status</errorMessage>
</ValidationRule>