force-app/main/default/objects/Lead/validationRules/Lead_Status_Is_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Is_ReadOnly</fullName>
    <active>false</active>
    <description
  >Lead Status is Read-Only for persons with Sales - All Products profiles.</description>
    <errorConditionFormula
  >AND($Profile.Name = &#39;Sales - All Products&#39;, ISCHANGED( Status ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage
  >Lead Status is Read-Only for persons with &quot;Sales - All Products&quot; profiles.</errorMessage>
</ValidationRule>